--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,7 +85,6 @@ a {
   font-size: 39px;
   color: beige;
   text-shadow: 5px 3px 3px #000;
-  text-transform: capitalize;
 }
 
 .header__subtitle {
@@ -279,13 +278,14 @@ a {
 .footer__inner {
   padding: 15px 50px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
 
 .footer__link {
   display: block;
+  margin: 0 auto;
   width: 100%;
   letter-spacing: 0.1rem;
   color: dodgerblue;
